--- a/projects/js-packages/svelte-data-sync-client/package.json
+++ b/projects/js-packages/svelte-data-sync-client/package.json
@@ -20,13 +20,15 @@
     "build": "pnpm run clean && webpack",
     "clean": "rm -rf build/",
     "watch": "pnpm run build && pnpm webpack watch",
+    "reformat-files": "../../../tools/js-tools/node_modules/.bin/prettier --ignore-path .eslintignore --write --plugin-search-dir=. ./src/**/*.ts",
+    "lint": "pnpm run reformat-files && echo 'Running eslint...' && pnpm eslint src --fix && echo '✔ prettier and eslint ran successfully.'",
     "test-coverage": "pnpm run test --coverageDirectory=\"$COVERAGE_DIR\" --coverage --coverageReporters=clover",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "devDependencies": {
     "@automattic/jetpack-webpack-config": "workspace:*",
     "@typescript-eslint/parser": "5.36.1",
-	"eslint": "8.22.0",
+    "eslint": "8.22.0",
     "jest": "29.3.1",
     "svelte": "3.55.1",
     "ts-loader": "9.4.2",
@@ -41,5 +43,5 @@
     "yarn": "use pnpm instead - see docs/yarn-upgrade.md"
   },
   "main": "./build/index.js",
-  "types": "./build/index.d.ts"
+  "types": "./build/index.d.ts",
 }
