--- a/projects/js-packages/svelte-data-sync-client/package.json
+++ b/projects/js-packages/svelte-data-sync-client/package.json
@@ -43,5 +43,5 @@
     "yarn": "use pnpm instead - see docs/yarn-upgrade.md"
   },
   "main": "./build/index.js",
-  "types": "./build/index.d.ts",
+  "types": "./build/index.d.ts"
 }
