--- a/projects/plugins/jetpack-mu-wpcom-plugin/composer.json
+++ b/projects/plugins/jetpack-mu-wpcom-plugin/composer.json
@@ -8,7 +8,8 @@
 	},
 	"require-dev": {
 		"yoast/phpunit-polyfills": "1.0.4",
-		"automattic/jetpack-changelogger": "@dev"
+		"automattic/jetpack-changelogger": "@dev",
+		"automattic/wordbless": "^0.4.0"
 	},
 	"autoload": {
 		"classmap": [
@@ -24,7 +25,9 @@
 		],
 		"test-php": [
 			"@composer phpunit"
-		]
+		],
+		"post-install-cmd": "WorDBless\\Composer\\InstallDropin::copy",
+		"post-update-cmd": "WorDBless\\Composer\\InstallDropin::copy"
 	},
 	"repositories": [
 		{
