--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -57,7 +57,7 @@ jobs:
           fetch-depth: 2
 
       # For pull requests, list-changed-projects.sh needs the merge base.
-      # But it doesn't have to be checked out, and codecov.io requires it not be.
+      # But it doesn't have to be checked out.
       - name: Deepen to merge base
         if: github.event_name == 'pull_request'
         uses: ./.github/actions/deepen-to-merge-base
@@ -68,7 +68,6 @@ jobs:
         uses: ./.github/actions/tool-setup
         with:
           php: ${{ matrix.php }}
-          coverage: ${{ matrix.script == 'test-coverage' && 'pcov' || 'none' }}
           node: ${{ matrix.node }}
 
       - name: Monorepo install
@@ -95,7 +94,7 @@ jobs:
           CHANGED: ${{ steps.changed.outputs.projects }}
         run: |
           # If we're going to be making WorDBless use WP "nightlies", remove the relevant package from Composer's cache to get the latest version.
-          if [[ "$WP_BRANCH" == 'trunk' && ( "$TEST_SCRIPT" == "test-php" || "$TEST_SCRIPT" == "test-coverage" ) ]]; then
+          if [[ "$WP_BRANCH" == 'trunk' && ( "$TEST_SCRIPT" == "test-php" ) ]]; then
             DIR=$(composer config cache-files-dir)
             rm -rf "$DIR/roots/wordpress"
           fi
@@ -142,7 +141,7 @@ jobs:
               echo "::group::Running tests for $SLUG"
 
               # Composer install, if appropriate. Note setup-wordpress-env.sh did it already for plugins.
-              if [[ "${SLUG%%/*}" != "plugins" && ( "$TEST_SCRIPT" == "test-php" || "$TEST_SCRIPT" == "test-coverage" ) ]]; then
+              if [[ "${SLUG%%/*}" != "plugins" && "$TEST_SCRIPT" == "test-php" ]]; then
                 if [[ ! -f "$DIR/composer.lock" ]]; then
                   echo 'No composer.lock, running `composer update`'
                   composer --working-dir="$DIR" update
@@ -155,7 +154,7 @@ jobs:
                 fi
               fi
 
-              if [[ "$WP_BRANCH" == 'trunk' && ( "$TEST_SCRIPT" == "test-php" || "$TEST_SCRIPT" == "test-coverage" ) ]]; then
+              if [[ "$WP_BRANCH" == 'trunk' && "$TEST_SCRIPT" == "test-php" ]]; then
                 VER=$(composer --format=json --working-dir="$DIR" show | jq -r '.installed[] | select( .name == "roots/wordpress" ) | .version')
                 if [[ -n "$VER" ]]; then
                   echo 'Supposed to run tests against WordPress trunk, so upgrading roots/wordpress to dev-nightly'
@@ -167,10 +166,6 @@ jobs:
 
               mkdir -p "artifacts/$SLUG"
               export ARTIFACTS_DIR="$GITHUB_WORKSPACE/artifacts/$SLUG"
-              if [[ "$TEST_SCRIPT" == "test-coverage" ]]; then
-                mkdir -p "coverage/$SLUG"
-                export COVERAGE_DIR="$GITHUB_WORKSPACE/coverage/$SLUG"
-              fi
               FAIL=false
               if ! composer run --timeout=0 --working-dir="$DIR" "$TEST_SCRIPT"; then
                 FAIL=true
@@ -186,13 +181,6 @@ jobs:
             fi
           done
           exit $EXIT
-
-      - name: Process coverage results
-        env:
-          CHANGED: ${{ steps.changed.outputs.projects }}
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-        if: matrix.script == 'test-coverage'
-        run: .github/files/process-coverage.sh
 
       - name: Check for artifacts
         id: check-artifacts
