--- a/projects/packages/forms/package.json
+++ b/projects/packages/forms/package.json
@@ -16,7 +16,7 @@
 	"author": "Automattic",
 	"scripts": {
 		"build": "pnpm run build:contact-form",
-		"build:contact-form": "webpack --config ./tools/webpack.config.contact-form.js",
+		"build:contact-form": "NODE_PATH=\"$PWD/node_modules\" webpack --config ./tools/webpack.config.contact-form.js",
 		"clean": "true"
 	},
 	"dependencies": {
@@ -26,7 +26,10 @@
 	"devDependencies": {
 		"@automattic/jetpack-webpack-config": "workspace:*",
 		"@automattic/remove-asset-webpack-plugin": "workspace:*",
+		"autoprefixer": "10.4.12",
+		"postcss": "8.4.21",
 		"postcss-loader": "6.2.0",
+		"sass": "1.38.1",
 		"sass-loader": "12.4.0"
 	},
 	"engines": {
