--- a/projects/plugins/import/package.json
+++ b/projects/plugins/import/package.json
@@ -18,8 +18,8 @@
 		"build-concurrently": "pnpm run clean && concurrently 'pnpm:build-client'",
 		"build-production-concurrently": "pnpm run clean && concurrently 'NODE_ENV=production BABEL_ENV=production pnpm run build-client' && pnpm run validate",
 		"clean": "rm -rf build/",
-		"test": "jest",
-		"validate": "pnpm exec validate-es build/",
+		"test": "",
+		"validate": "",
 		"watch": "pnpm run build && webpack watch"
 	},
 	"browserslist": [
