--- a/projects/packages/forms/.gitattributes
+++ b/projects/packages/forms/.gitattributes
@@ -6,6 +6,8 @@ package.json      export-ignore
 # Files to include in the mirror repo, but excluded via gitignore
 # Remember to end all directories with `/**` to properly tag every file.
 # /src/js/example.min.js  production-include
+/src/**/*.min.css production-include
+/src/**/*.rtl.css production-include
 
 # Files to exclude from the mirror repo, but included in the monorepo.
 # Remember to end all directories with `/**` to properly tag every file.
