--- a/projects/plugins/jetpack/composer.json
+++ b/projects/plugins/jetpack/composer.json
@@ -11,48 +11,48 @@
 		"ext-fileinfo": "*",
 		"ext-json": "*",
 		"ext-openssl": "*",
-		"automattic/jetpack-a8c-mc-stats": "@dev",
-		"automattic/jetpack-abtest": "@dev",
-		"automattic/jetpack-action-bar": "@dev",
-		"automattic/jetpack-assets": "@dev",
-		"automattic/jetpack-autoloader": "@dev",
-		"automattic/jetpack-backup": "@dev",
-		"automattic/jetpack-blaze": "@dev",
-		"automattic/jetpack-blocks": "@dev",
-		"automattic/jetpack-compat": "@dev",
-		"automattic/jetpack-composer-plugin": "@dev",
-		"automattic/jetpack-config": "@dev",
-		"automattic/jetpack-connection": "@dev",
-		"automattic/jetpack-constants": "@dev",
-		"automattic/jetpack-device-detection": "@dev",
-		"automattic/jetpack-error": "@dev",
-		"automattic/jetpack-forms": "@dev",
-		"automattic/jetpack-google-fonts-provider": "@dev",
-		"automattic/jetpack-identity-crisis": "@dev",
-		"automattic/jetpack-jitm": "@dev",
-		"automattic/jetpack-lazy-images": "@dev",
-		"automattic/jetpack-licensing": "@dev",
-		"automattic/jetpack-logo": "@dev",
-		"automattic/jetpack-my-jetpack": "@dev",
-		"automattic/jetpack-partner": "@dev",
-		"automattic/jetpack-plugins-installer": "@dev",
-		"automattic/jetpack-post-list": "@dev",
-		"automattic/jetpack-publicize": "@dev",
-		"automattic/jetpack-redirect": "@dev",
-		"automattic/jetpack-roles": "@dev",
-		"automattic/jetpack-search": "@dev",
-		"automattic/jetpack-stats": "@dev",
-		"automattic/jetpack-stats-admin": "@dev",
-		"automattic/jetpack-status": "@dev",
-		"automattic/jetpack-sync": "@dev",
-		"automattic/jetpack-videopress": "@dev",
-		"automattic/jetpack-waf": "@dev",
-		"automattic/jetpack-wordads": "@dev",
+		"automattic/jetpack-a8c-mc-stats": "^1.4.18",
+		"automattic/jetpack-abtest": "^1.10.11",
+		"automattic/jetpack-action-bar": "^0.1.9",
+		"automattic/jetpack-assets": "^1.17.30",
+		"automattic/jetpack-autoloader": "^2.11.15",
+		"automattic/jetpack-backup": "^1.12.0",
+		"automattic/jetpack-blaze": "^0.5.0",
+		"automattic/jetpack-blocks": "^1.4.19",
+		"automattic/jetpack-compat": "^1.7.5",
+		"automattic/jetpack-composer-plugin": "^1.1.9",
+		"automattic/jetpack-config": "^1.13.0",
+		"automattic/jetpack-connection": "^1.49.1",
+		"automattic/jetpack-constants": "^1.6.20",
+		"automattic/jetpack-device-detection": "^1.4.23",
+		"automattic/jetpack-error": "^1.3.18",
+		"automattic/jetpack-forms": "^0.2.0",
+		"automattic/jetpack-google-fonts-provider": "^0.5.0",
+		"automattic/jetpack-identity-crisis": "^0.8.35",
+		"automattic/jetpack-jitm": "^2.2.40",
+		"automattic/jetpack-lazy-images": "^2.1.30",
+		"automattic/jetpack-licensing": "^1.7.14",
+		"automattic/jetpack-logo": "^1.5.21",
+		"automattic/jetpack-my-jetpack": "^2.7.7",
+		"automattic/jetpack-partner": "^1.7.21",
+		"automattic/jetpack-plugins-installer": "^0.2.2",
+		"automattic/jetpack-post-list": "^0.4.3",
+		"automattic/jetpack-publicize": "^0.19.2",
+		"automattic/jetpack-redirect": "^1.7.23",
+		"automattic/jetpack-roles": "^1.4.21",
+		"automattic/jetpack-search": "^0.31.6",
+		"automattic/jetpack-stats": "^0.4.1",
+		"automattic/jetpack-stats-admin": "^0.4.1",
+		"automattic/jetpack-status": "^1.16.1",
+		"automattic/jetpack-sync": "^1.47.1",
+		"automattic/jetpack-videopress": "^0.10.8",
+		"automattic/jetpack-waf": "^0.9.0",
+		"automattic/jetpack-wordads": "^0.2.29",
 		"nojimage/twitter-text-php": "3.1.2"
 	},
 	"require-dev": {
 		"antecedent/patchwork": "2.1.21",
-		"automattic/jetpack-changelogger": "@dev",
+		"automattic/jetpack-changelogger": "^3.3.1",
 		"johnkary/phpunit-speedtrap": "^4.0.0 || ^2.0.0 || ^1.1.0",
 		"yoast/phpunit-polyfills": "1.0.4"
 	},
@@ -82,15 +82,7 @@
 			"pnpm run watch"
 		]
 	},
-	"repositories": [
-		{
-			"type": "path",
-			"url": "../../packages/*",
-			"options": {
-				"monorepo": true
-			}
-		}
-	],
+	"repositories": [],
 	"autoload": {
 		"classmap": [
 			"src"
