--- a/projects/packages/forms/composer.json
+++ b/projects/packages/forms/composer.json
@@ -3,11 +3,11 @@
 	"description": "Jetpack Forms",
 	"type": "jetpack-library",
 	"license": "GPL-2.0-or-later",
-	"require": {},
 	"require-dev": {
 		"yoast/phpunit-polyfills": "1.0.4",
 		"automattic/jetpack-changelogger": "@dev",
-		"automattic/wordbless": "dev-master"
+		"automattic/jetpack-connection": "@dev",
+		"automattic/wordbless": "^0.4.1"
 	},
 	"autoload": {
 		"classmap": [
@@ -51,7 +51,7 @@
 			"link-template": "https://github.com/automattic/jetpack-forms/compare/v${old}...v${new}"
 		},
 		"branch-alias": {
-			"dev-trunk": "0.2.x-dev"
+			"dev-trunk": "0.3.x-dev"
 		},
 		"textdomain": "jetpack-forms",
 		"version-constants": {
@@ -62,5 +62,11 @@
 		"allow-plugins": {
 			"roots/wordpress-core-installer": true
 		}
+	},
+	"require": {
+		"automattic/jetpack-blocks": "@dev",
+		"automattic/jetpack-assets": "@dev",
+		"automattic/jetpack-connection": "@dev",
+		"automattic/jetpack-status": "@dev"
 	}
 }
